--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     
   },
   "keywords": [],
-  "author": "",
+  "author": "salva",
   "license": "ISC",
   "dependencies": {
     "node": "^20.18.3",
